--- a/config/database.yml
+++ b/config/database.yml
@@ -85,5 +85,5 @@ test:
 production:
   <<: *default
   database: ChatApp_production
-  username: ChatApp
-  password: <%= ENV["CHATAPP_DATABASE_PASSWORD"] %>
+  username: postgres
+  password: agu@3005
