--- a/config/database.yml
+++ b/config/database.yml
@@ -86,5 +86,5 @@ production:
   <<: *default
   database: ChatApp_production
   username: postgres
-  password: <%= ENV['MYSITE_DATABASE_PASSWORD'] %>
+  password: <%= ENV['MYSITE_DATABASE_PASSWORD'] %>`
   url: <%= ENV['DATABASE_URL'] %>
